package ca.mcmaster.se2aa4.mazerunner;

public enum MazeChar {
    WALL,
    SPACE
}
