package ca.mcmaster.se2aa4.mazerunner;

public enum Moves {
    F,
    R,
    L
}
