package ca.mcmaster.se2aa4.mazerunner.algorithm;

public interface Solver {
    void solve();
    double getExecutionTime();
    String getPath();
}
