package ca.mcmaster.se2aa4.mazerunner.benchmarking;

public interface Performance {
    public void benchmark(); 
}
