package ca.mcmaster.se2aa4.mazerunner.configurations;

public enum Algorithm {
    RIGHTHAND, 
    BFS, 
}
