package ca.mcmaster.se2aa4.mazerunner.configurations;

public enum Mode {
    BASELINE,
    TEST,
    VERIFY
    
}
